# PyIMAGE

./: .gitignore  .travis.yml  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  manage.py  notes.txt  pyproject.toml
pills/: asgi.py  settings.py  urls.py  wsgi.py
pillycam/: apps.py  clean.py  effects.py  forms.py  models.py  urls.py  views.py
pillycam/migrations/: 0001_initial.py  0002_userprofile_avatar_url.py  0003_alter_uploadimage_user.py
pillycam/static/css/: dashboard.css  leftbar.css  navbar.css  provider.css  style.css
pillycam/static/images/: logo.jpg:Zone.Identifier
pillycam/static/js/: dropzone.js  jquery.js
pillycam/templates/account/: base.html  login.html
pillycam/templates/dashboard/: home.html
pillycam/templates/main/: 404.html  500.html  board.html  dashboard.html  display_modal.html  effects.html  index.html  leftbar.html  navbar.html  snippet_header.html
pillycam/templates/socialaccount/snippets/: provider_list.html
pyIMAGE/: db.sqlite3  manage.py
pyIMAGE/processer/: apps.py  clean.py  effect.py  forms.py  models.py  urls.py  views.py
pyIMAGE/processer/migrations/: 0001_initial.py  0002_uploadedimage_delete_userprofile.py  0003_uploadedimage_social_id_and_more.py  0004_remove_uploadedimage_social_provider.py  0005_remove_uploadedimage_effects_and_more.py  0006_uploadfile.py  0007_userprofile_alter_uploadedimage_options_and_more.py
pyIMAGE/processer/templates/: base.html  home.html
pyIMAGE/pyIMAGE/: asgi.py  settings.py  urls.py  wsgi.py
pyverse/: manage.py
pyverse/processor/: effects.py  models.py  views.py
pyverse/pyverse/: asgi.py  settings.py  urls.py  wsgi.py
pyverse/templates/account/: base.html  login.html
pyverse/templates/dashboard/: home.html
static/: styles.css
templates/: base.html
(+12 files in other folders)
