[tool.poetry]
name = "pyimage"
version = "0.1.0"
description = ""
authors = ["Craigryy <harriajames97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
djangorestframework = "^3.14.0"
django-allauth = "^0.57.0"
pillow = "^10.0.1"
facebook-sdk = "^3.1.0"
django-rest-auth = "^0.9.5"
social-auth-app-django = "^5.3.0"
django-imagekit = "^5.0.0"
django-social-share = "^2.3.0"
psycopg2-binary = "^2.9.9"
tox = "^4.11.3"
autopep8 = "^2.0.4"
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
